added eda script; minor changes to notebooks

--- a/jem_12topics.ipynb
+++ b/jem_12topics.ipynb
@@ -1009,6 +1009,8 @@
    ],
    "source": [
     "jem = df[df.journal_title == 'The Journal of Experimental Medicine'].copy()\n",
+    "\n",
+    "# customized eda function\n",
     "eda(jem)"
    ]
   },
@@ -1144,6 +1146,7 @@
     "\n",
     "jem.drop_duplicates(inplace=True)\n",
     "\n",
+    "# customized eda function\n",
     "eda(jem)"
    ]
   },
