--- a/main_analysis.ipynb
+++ b/main_analysis.ipynb
@@ -6535,6 +6535,8 @@
     "# and the data was combined in the following csv file\n",
     "csv_file = '/media/fay/38E0D529E0D4EE5E/Users/Fay/Documents/GA/GA_capstone/data/pmc.csv'\n",
     "df = pd.read_csv(csv_file)\n",
+    "\n",
+    "# customized eda function\n",
     "eda(df)"
    ]
   },
@@ -6826,6 +6828,7 @@
     }
    ],
    "source": [
+    "# customized eda function\n",
     "eda(df, head=False)"
    ]
   },
@@ -9970,6 +9973,7 @@
    ],
    "source": [
     "jcb = df[df.journal_title == 'The Journal of Cell Biology'].copy()\n",
+    "# customized eda function\n",
     "eda(jcb)"
    ]
   },
@@ -10098,6 +10102,7 @@
    ],
    "source": [
     "jcb.drop_duplicates(keep=False, inplace=True)\n",
+    "# customized eda function\n",
     "eda(jcb)"
    ]
   },
