--- a/main_analysis.ipynb
+++ b/main_analysis.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Executive Summary\n",
-    "The aim of this project was to use the text from biomedical and life science literature to gain insights on research topic trends over time. The data was extracted from the [text mining collections](https://www.ncbi.nlm.nih.gov/pmc/tools/textmining/) made available by the [PubMed Central (PMC) archive](https://www.ncbi.nlm.nih.gov/pmc/about/intro/), an archive of biomedical and life sciences journal literature at the U.S. National Institutes of Health's National Library of Medicine. Through dynamic topic modeling, I discovered the underlying themes of the text collections and observed some interesting changes over time. This method offers new ways to automatically organize, search, index, and browse large document collections."
+    "The aim of this project was to use the text from biomedical and life science literature to gain insights on research topic trends over time. The data was extracted from the [text mining collections](https://www.ncbi.nlm.nih.gov/pmc/tools/textmining/) made available by the [PubMed Central (PMC) archive](https://www.ncbi.nlm.nih.gov/pmc/about/intro/), an archive of biomedical and life sciences journal literature at the U.S. National Institutes of Health's National Library of Medicine. Through dynamic topic modeling, I discovered the underlying themes of the text collections and observed some interesting changes over time. Using this method, I can potentially automate the processes of organizing, searching, indexing, and browsing large document collections."
    ]
   },
   {
@@ -30,7 +30,7 @@
     "## Methods and Results\n",
     "The data was obtained from a subset of the [PubMed Central (PMC) archive](https://www.ncbi.nlm.nih.gov/pmc/about/intro/), an archive of biomedical and life sciences journal literature at the U.S. National Institutes of Health's National Library of Medicine, which is made [freely available](https://www.ncbi.nlm.nih.gov/pmc/tools/textmining/) to the public under a Creative Commons or similar license. This subset contains over 1 millions articles. Specifically, for each article, meta data (such as publication year, journal title, etc.) and content (article title and abstract) were extracted from the corresponding XML file. Natural Language Processing technique was used to extract text features from the article titles and abstracts. The text was then analyzed by dynamic topic modeling, which captures the evolution of topics in a sequentially organized corpus of documents.  \n",
     "  \n",
-    "As a proof of concept, I analyzed 23,896 articles from [_The Journal of Cell Biology_](http://jcb.rupress.org/) from 1962 through present (2017). The corpus is made up of approximately 2.2 million words. The vocabulary was pruned by \"[lemmatizing](http://www.nltk.org/api/nltk.stem.html#nltk.stem.wordnet.WordNetLemmatizer)\", removing stop words, and removing terms that occurred fewer than 20 times. The total vocabulary size is 6,619. To explore the themes in the collection, I estimated a 10-component dynamic topic model. A few  of the resulting topics are illustrated in detail [below](#Process-output).  \n",
+    "As a proof of concept, I analyzed 23,896 articles from [_The Journal of Cell Biology_](http://jcb.rupress.org/) from 1962 through present (2017). The corpus is made up of approximately 2.2 million words. The vocabulary was pruned by \"[lemmatizing](http://www.nltk.org/api/nltk.stem.html#nltk.stem.wordnet.WordNetLemmatizer)\", removing stop words, and removing terms that occurred in fewer than 20 articles. The total vocabulary size is 6,619. To explore the themes in the collection, I estimated a 10-component dynamic topic model. A few  of the resulting topics are illustrated in detail [below](#Process-output).  \n",
     "  \n",
     "I also analyzed a collection from _The Journal of Experimental Medicine_, which is detailed [here](jem_9topics.ipynb)."
    ]
@@ -257,6 +257,12 @@
    "outputs": [],
    "source": [
     "def append_to_csv(csvfile, entry):\n",
+    "    \"\"\"\n",
+    "    append a row to a csv file\n",
+    "    :param csvfile: the path to a .csv file\n",
+    "    :param entry: a list representing a row in the .csv file\n",
+    "    :return: None\n",
+    "    \"\"\"\n",
     "    with open(csvfile, 'a', newline='') as f:\n",
     "        entry_writer = csv.writer(f, delimiter=',', quoting=csv.QUOTE_MINIMAL)\n",
     "        entry_writer.writerow(entry)"
@@ -16643,21 +16649,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
